# yaserde

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: bbigras_namespace.rs  boscop.rs  ln_dom.rs  svd.rs
sepserde/: Cargo.toml
sepserde/src/: lib.rs  primitives.rs
sepserde/src/de/: mod.rs
sepserde/src/ser/: mod.rs
sepserde/tests/: default.rs  deserializer.rs  enum.rs  errors.rs  flatten.rs  namespace.rs  option.rs  serializer.rs  skip_if.rs  types.rs
sepserde_derive/: Cargo.toml
sepserde_derive/src/: primitives.rs
sepserde_derive/src/common/: attribute.rs  field.rs
sepserde_derive/src/de/: expand_enum.rs  expand_struct.rs  mod.rs
sepserde_derive/src/ser/: element.rs  expand_enum.rs  expand_struct.rs  implement_serializer.rs  mod.rs  namespace.rs
yaserde/: Cargo.toml
yaserde/src/: lib.rs  primitives.rs
yaserde/src/de/: mod.rs
yaserde/src/ser/: mod.rs
yaserde/tests/: default.rs  deserializer.rs  enum.rs  errors.rs  flatten.rs  namespace.rs  option.rs  serializer.rs  skip_if.rs  types.rs
yaserde_derive/src/: lib.rs  primitives.rs
yaserde_derive/src/common/: attribute.rs  field.rs
yaserde_derive/src/de/: build_default_value.rs  expand_enum.rs  expand_struct.rs  mod.rs
yaserde_derive/src/ser/: element.rs  expand_enum.rs  expand_struct.rs  implement_serializer.rs  label.rs  namespace.rs
